--- a/.github/workflows/hello_world.yaml
+++ b/.github/workflows/hello_world.yaml
@@ -11,14 +11,14 @@ on:
 
 jobs:
   hello:
-    runs-on: ubuntu:latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: hello world
         run: echo "hello world"
         shell: bash 
   goodbye:
-    runs-on: unubtu-latest 
+    runs-on: ununtu-latest 
     steps:
       - name: goodbye world
         run: echo "Goodbye World"
