--- a/.github/workflows/hello_world.yaml
+++ b/.github/workflows/hello_world.yaml
@@ -21,5 +21,5 @@ jobs:
     runs-on: ununtu-latest 
     steps:
       - name: goodbye world
-        run: echo "Goodbye World"
+        run: echo "Goodbye World haha"
         shell: bash
